--- a/src/vistas/modulos/VistaProducto.form
+++ b/src/vistas/modulos/VistaProducto.form
@@ -48,7 +48,7 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="42" green="35" red="2a" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Productos / Lista de Productos"/>
+            <Property name="text" type="java.lang.String" value="Movimientos"/>
           </Properties>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
